k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lta-bus-timings
  labels:
    app: lta-bus-timings
spec:
  selector:
    matchLabels:
      app: lta-bus-timings
  template:
    metadata:
      labels:
        app: lta-bus-timings
    spec:
      containers:
        - name: lta-bus-timings
          image: registry.digitalocean.com/shiori-7d6ef8e7/lta_bus_timings@sha256:ed7b996f5b2fc3bc213ecc5a5bca10b599f8ad032c221789a7cc1e682a191f82
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: "500M"
              cpu: "250m"
