k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lta-bus-timings
spec:
  selector:
    app: lta-bus-timings
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 4000
